--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alpaha clash pro</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <!--first section-->
+    <section class="home">
+
+    </section>
+  <!--secend section-->  
+    <section class="play-ground">
+
+    </section>
+  <!--third section-->  
+    <section class="score">
+
+    </section>
 </body>
 </html>
