first section complate

--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    <!--first section-->
-    <section class="home">
-
+<body class="font-poppins">
+   <main class= "min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center">
+<!--1st section-->    
+    <section class="home text-white min-h-screen flex justify-center items-center">
+        <div class="flex flex-col items-center gap-8">
+            <h1 class="text-8xl">ALPHABET CLASH</h1>
+            <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+             <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Play Naw</button>
+        </div>   
     </section>
-  <!--secend section-->  
+ <!--2nd section-->    
     <section class="play-ground">
 
     </section>
-  <!--third section-->  
-    <section class="score">
+ <!--3rd section-->    
+     <section class="score">
 
-    </section>
+     </section>
+   </main>
 </body>
 </html>
